# paper-lib

./: .env.example  .gitignore  ACCESS.md  AGENTS.md  CLAUDE.md  EMBED_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PAPER_LIBRARY_README.md  PLAN.md  README.md  TEXT_FRAGMENT_SUPPORT.md  admin.html  auth.py  autofill_url.py  backend.py  db.py  ecosystem.config.cjs  embed.html  extract_pdf_metadata.py  fetch_paper_url.py  index.html  ldap_auth.py  login.html  package.json  pyproject.toml  run-backend.sh  run-frontend.sh  server.mjs  server.node.mjs  sha256_00f4ec589a741e6d6a68b0da8f4d1646bd66c07e42b26afaed31a977d3351e92.html  sha256_0c5ea209ae292fb1f631e8488fe8b97dd1af10b6c3bc14d5e9619353b6b0ee36.html  sha256_21e66a3cf72cabb81847f34594ab31d6d944db34549d19648f0ddac988f7c1a6.html  sha256_682e95c370e0ec6d9e9881be89938a0607601d8a9919c0ea0e09b74fd68bd96c.html  sha256_c57447caa33fe9d56ff499d3b6e90b1fd81ff2df20ca7e08203fa07bd2f25111.html  start.sh  stop.sh  text-fragment-demo.html  update_metadata_crawl4ai.py
Documentation/: REQUEST_draft.md
deploy/: CHECKLIST.md  DATA-RESTORE.md  DEPLOYMENT-OPTIONS.md  README.md  backend.env.example  nginx-frontend.conf  nginx-paper-lib.huamedicine.com.conf  server.distributed.mjs  setup-backend.sh  setup-frontend.sh  text-fragment-support.js
docs/: project-overview.md  search-api.md
scripts/: _embed_common.py  convert_papers_to_html.py  crawl_all_papers.py  create_embedding_table.sql  embed_all_papers.py  embed_new_paper.py  inject_download_button.py  inject_text_fragment_support.py  migrate_jsonl_to_sqlite.py  (+1 more)
(+25 files in other folders)
