[project]
name = "paper-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai",
    "PyMuPDF",
    "psycopg2-binary",
    "requests",
    "pikepdf",
    "fastapi>=0.137.1",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyjwt>=2.8.0",
    "ldap3>=2.9.1",
    "beautifulsoup4>=4.14.3",
]
